--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" alt="fisheye logo" />
-      <h1>Nos photographes</h1>
+      <a
+        tabindex="0"
+        class="homePage_link"
+        href="index.html"
+        alt="Fisheye Home page"
+      >
+        <img src="assets/images/logo.png" class="logo" alt="fisheye logo" />
+      </a>
+      <h1 id="title">Nos photographes</h1>
     </header>
     <main id="main">
-      <div class="photographer_section"></div>
+      <div class="photographer_section" aria-labelledby="title"></div>
     </main>
     <script src="scripts/templates/photographer.js"></script>
     <script src="scripts/decorators/cardWithLink.js"></script>
