--- a/photographer.html
+++ b/photographer.html
@@ -12,14 +12,32 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a
+        class="homePage_link"
+        tabindex="0"
+        href="index.html"
+        alt="Fisheye Home page"
+      >
+        <img src="assets/images/logo.png" class="logo" />
+      </a>
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">
-          Contactez-moi
-        </button>
-      </div>
+      <section class="photograph-header"></section>
+      <section class="medias-section">
+        <div class="medias-section__sorter">
+          <p>Trier par</p>
+          <div id="collapse">
+            <button class="collapse__chosen">
+              <p>test</p>
+              <img src="./assets/icons/arrow-up.png" />
+            </button>
+            <div class="collapse__other-choices-container">
+              <button><p>test</p></button>
+              <button><p>test</p></button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <div id="contact_modal">
       <div class="modal">
@@ -36,6 +54,9 @@
         </form>
       </div>
     </div>
+    <script src="scripts/templates/photographer.js"></script>
+    <script src="scripts/templates/collapse.js"></script>
+    <script src="scripts/api/api.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
