Correction du visuel du collapse

--- a/photographer.html
+++ b/photographer.html
@@ -27,22 +27,29 @@
         <div class="medias-section__sorter">
           <p>Trier par</p>
           <div id="collapse">
-            <button class="collapse__chosen">
+            <button tabindex="0" class="collapse__chosen">
               <p></p>
               <span class="collapse__chosen__icon" aria-hidden="true"></span>
             </button>
             <div class="collapse__other-choices-container">
-              <button class="collapse__other-choices-container__choice1">
+              <button
+                tabindex="0"
+                class="collapse__other-choices-container__choice1"
+              >
                 <span class="divider">.</span>
                 <p></p>
               </button>
-              <button class="collapse__other-choices-container__choice2">
+              <button
+                tabindex="0"
+                class="collapse__other-choices-container__choice2"
+              >
                 <span class="divider">.</span>
                 <p></p>
               </button>
             </div>
           </div>
         </div>
+        <article class="medias-section__medias"></article>
       </section>
     </main>
     <div id="contact_modal">
