--- a/photographer.html
+++ b/photographer.html
@@ -33,14 +33,14 @@
             </button>
             <div class="collapse__other-choices-container">
               <button
-                tabindex="0"
+                tabindex="-1"
                 class="collapse__other-choices-container__choice1"
               >
                 <span class="divider">.</span>
                 <p></p>
               </button>
               <button
-                tabindex="0"
+                tabindex="-1"
                 class="collapse__other-choices-container__choice2"
               >
                 <span class="divider">.</span>
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <article class="medias-section__medias"></article>
+        <div class="medias-section__medias"></div>
       </section>
     </main>
     <div id="contact_modal">
@@ -67,7 +67,17 @@
         </form>
       </div>
     </div>
+    <aside>
+      <div class="like-container">
+        <p class="like-container__amount"></p>
+        <span class="like-container__icon"></span>
+      </div>
+      <p class="salary-container">
+        <span class="salary-container__amount"></span>€ / jour
+      </p>
+    </aside>
     <script src="scripts/templates/photographer.js"></script>
+    <script src="scripts/templates/mediaCard.js"></script>
     <script src="scripts/api/api.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
