--- a/photographer.html
+++ b/photographer.html
@@ -82,5 +82,6 @@
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="/scripts/utils/photosSorter.js"></script>
+    <script src="/scripts/utils/sortMedias.js"></script>
   </body>
 </html>
