--- a/photographer.html
+++ b/photographer.html
@@ -78,6 +78,7 @@
     </aside>
     <script src="scripts/templates/photographer.js"></script>
     <script src="scripts/templates/mediaCard.js"></script>
+    <script src="scripts/decorators/interactiveMediaCard.js"></script>
     <script src="scripts/api/api.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
