--- a/photographer.html
+++ b/photographer.html
@@ -84,5 +84,6 @@
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="/scripts/utils/photosSorter.js"></script>
     <script src="/scripts/utils/sortMedias.js"></script>
+    <script src="/scripts/likes/likes.js"></script>
   </body>
 </html>
