--- a/photographer.html
+++ b/photographer.html
@@ -79,6 +79,7 @@
     <script src="scripts/templates/photographer.js"></script>
     <script src="scripts/templates/mediaCard.js"></script>
     <script src="scripts/decorators/interactiveMediaCard.js"></script>
+    <script src="scripts/factories/mediaFactory.js"></script>
     <script src="scripts/api/api.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
