--- a/photographer.html
+++ b/photographer.html
@@ -52,19 +52,81 @@
         <div class="medias-section__medias"></div>
       </section>
     </main>
-    <div id="contact_modal">
-      <div class="modal">
-        <header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-        <form>
-          <div>
-            <label>Prénom</label>
-            <input />
+    <div id="modal-container">
+      <div id="contact_modal">
+        <div class="modal">
+          <div class="modal__header">
+            <h2>Contactez-moi</h2>
+            <h3></h3>
+            <img tabindex="0" alt="close" src="assets/icons/close.svg" />
           </div>
-          <button class="contact_button">Envoyer</button>
-        </form>
+          <form>
+            <div class="formData">
+              <label for="first">Prénom</label><br />
+              <input
+                class="text-control"
+                type="text"
+                id="first"
+                name="first"
+              /><br />
+            </div>
+            <div class="formData">
+              <label for="last">Nom</label><br />
+              <input
+                class="text-control"
+                type="text"
+                id="last"
+                name="last"
+                minlength="2"
+              /><br />
+            </div>
+            <div class="formData">
+              <label for="email">E-mail</label><br />
+              <input
+                class="text-control"
+                type="email"
+                id="email"
+                name="email"
+              /><br />
+            </div>
+            <div class="formData">
+              <label for="message">Message</label><br />
+              <textarea
+                class="text-control"
+                type="text"
+                id="message"
+                name="message"
+                rows="9"
+              ></textarea
+              ><br />
+            </div>
+
+            <button class="contact_button">Envoyer</button>
+          </form>
+        </div>
+      </div>
+      <div id="lightbox_modal">
+        <div class="lightbox__previous">
+          <img
+            tabindex="0"
+            src="assets/icons/previous.svg"
+            alt="Image précédente"
+          />
+        </div>
+        <div class="lightbox__content">
+          <div class="lightbox__content__media-container"></div>
+          <p class="lightbox__content__title"></p>
+        </div>
+        <div class="lightbox__next">
+          <img tabindex="0" src="assets/icons/next.svg" alt="Image suivante" />
+        </div>
+        <div class="lightbox__close">
+          <img
+            tabindex="0"
+            src="assets/icons/close-red.svg"
+            alt="Fermer l'image"
+          />
+        </div>
       </div>
     </div>
     <aside>
@@ -83,6 +145,7 @@
     <script src="scripts/api/api.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/utils/lightbox.js"></script>
     <script src="/scripts/utils/photosSorter.js"></script>
     <script src="/scripts/utils/sortMedias.js"></script>
     <script src="/scripts/likes/likes.js"></script>
