--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   </head>
   <body>
     <header>
-      <a
-        tabindex="0"
-        class="homePage_link"
-        href="index.html"
-        alt="Fisheye Home page"
-      >
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo" />
+      <a tabindex="0" class="homePage_link" href="index.html">
+        <img
+          alt="Fisheye Home page"
+          src="assets/images/logo.png"
+          class="logo"
+        />
       </a>
       <h1 id="title">Nos photographes</h1>
     </header>
