--- a/photographer.html
+++ b/photographer.html
@@ -12,13 +12,12 @@
   </head>
   <body>
     <header>
-      <a
-        class="homePage_link"
-        tabindex="0"
-        href="index.html"
-        alt="Fisheye Home page"
-      >
-        <img src="assets/images/logo.png" class="logo" />
+      <a class="homePage_link" tabindex="0" href="index.html">
+        <img
+          alt="Fisheye Home page"
+          src="assets/images/logo.png"
+          class="logo"
+        />
       </a>
     </header>
     <main id="main">
