--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
       </a>
     </header>
     <main id="main">
-      <section class="photograph-header"></section>
+      <section class="photographer-header"></section>
       <section class="medias-section">
         <div class="medias-section__sorter">
           <p>Trier par</p>
