--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/icons/logo.svg" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Manrope:wght@400;500;700&display=swap"
+      rel="stylesheet" />
     <title>Les petits plats</title>
   </head>
   <body>
     <header>
       <!-- logo -->
-      <div class="logo-container">
-        <p class="logo-container__label">Les petits plats</p>
-        <img
-          src="assets/icons/logo.svg"
-          alt="Logo Les petits plats"
-          class="logo-container__logo" />
-      </div>
+      <img
+        src="assets/icons/full-logo.svg"
+        alt="Logo Les petits plats"
+        class="logo" />
       <!-- title  -->
       <h1>
         CHERCHEZ PARMI PLUS DE 1500 RECETTES DU QUOTIDIEN,SIMPLES ET DÉLICIEUSES
